backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend-service
spec:
  selector:
    app: flask-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
